2004-06-15  Florian Boor  <florian.boor@kernelconcepts.de>
	* Released V 0.2.8
	* Makefile: Updated version.
	* familiar/control1: Fixed dependency to new libgpewidget.

2004-06-14  Florian Boor  <florian.boor@kernelconcepts.de>
	* sketchpad.c: (reset_drawing_area) Fixed minor memory leak.
	* selector.c: (open_indexed_sketch) Fixed minor memory leak.
	* selector-cb.c: (on_treeview_event) Fixed minor memory leak.
	* selector-gui.c, sketchpad-gui.c: Removed setting of toolbar style, this
	  should be done via GTK/Xsettings now.
	* sketchpad-cb.c: (on_window_size_allocate) Improved position handling.
	  Honors common toolbar on top on systems with large screen now too.
	* preferences.c: Avoid nasty error message if preferences table exists.
	* src/selector.c, src/sketchpad-cb.c, src/selector-gui.c, src/selector-cb.c:
	  Changed GpeIconlist widget to GpeIconListView widget.

2004-05-03  Philip Blundell  <philb@gnu.org>

	* src/Makefile: Use PACKAGE_CFLAGS, etc.
	* src/gpe-sketchbook.c: Include <locale.h>.

2003-07-06  Moray Allan  <moray@sermisy.org>

	* Makefile (install-program): Install .desktop file with .desktop
	filename extension.
	* Makefile (install-program): Install pixmaps with correct permissions.
	* Makefile (install-program), gpe-sketchbook.menu: No longer install
	old-style menu file.

2003-03-23  Colin Marquardt  <colin@marquardt-home.de>

	* Makefile (install-program): New name for 'install' ('install' is
	now provided by Makefile.dpkg_ipkg).  

2002-10-26  Luc Pionchon  <luc@handhelds.org>

	* src/selector-gui.c: 
	* src/selector-cb.c: 
	* src/sketchpad-cb.c: 
	* src/sketchpad-gui.c: 
	* src/files-png.c: initial GTK2 port: makes it to compile and run

2002-10-20  Luc Pionchon  <luc@handhelds.org>

	* src/selector-gui.c: added icons view to the selector, which is
	an alternative to the clist.

2002-09-13  Luc Pionchon  <luc@handhelds.org>

	* src/sketchpad-gui.c src/sketchpad-cb.[ch]: added support for
	keypad scrolling.
