@@ -1,3 +1,6 @@
+2004-07-12  Florian Boor  <florian.boor@kernelconcepts.de>
+	* Set default sketch size to something related to screen size.
+
 2004-06-15  Florian Boor  <florian.boor@kernelconcepts.de>
 	* Released V 0.2.8
 	* Makefile: Updated version.
